crates/tmark-writers/tests/snapshots/fixtures__critic-comment@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>The proof holds. <span class="critic"></span></p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
