crates/tmark-writers/tests/snapshots/fixtures__critic-comment@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
The proof holds. \tscomment{cite Knuth here}

---requires---
{
  "packages": [
    "ulem",
    "xcolor"
  ],
  "fragments": [
    "ts-critic"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
