crates/tmark-writers/tests/snapshots/fixtures__critic-comment@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
The proof holds.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
