crates/tmark-writers/tests/snapshots/fixtures__critic-delete@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>A <span class="critic"><del>redundant</del></span> word, and <code>{--not this--}</code> in code.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
