crates/tmark-writers/tests/snapshots/fixtures__critic-delete@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
A \sout{redundant} word, and \tscodeinline{\{-\allowbreak{}-\allowbreak{}not this-\allowbreak{}-\allowbreak{}\}} in code.

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox",
    "ulem"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
