crates/tmark-writers/tests/snapshots/fixtures__critic-delete@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
A #ts-del[redundant] word, and `{--not this--}` in code.

---requires---
{
  "packages": [
    "ulem",
    "xcolor"
  ],
  "fragments": [
    "ts-critic"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
