crates/tmark-writers/tests/snapshots/fixtures__critic-highlight@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Keep \tsmark{this sentence} for the summary.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
