crates/tmark-writers/tests/snapshots/fixtures__critic-highlight@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Keep #highlight[this sentence] for the summary.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
