crates/tmark-writers/tests/snapshots/fixtures__critic-insert@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>The release is <ins class="critic">almost <strong>ready</strong></ins> now.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
