crates/tmark-writers/tests/snapshots/fixtures__critic-insert@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
The release is \tsins{almost \textbf{ready}} now.

---requires---
{
  "packages": [
    "ulem",
    "xcolor"
  ],
  "fragments": [
    "ts-critic"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
