crates/tmark-writers/tests/snapshots/fixtures__critic-insert@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
The release is #ts-ins[almost *ready*] now.

---requires---
{
  "packages": [
    "ulem",
    "xcolor"
  ],
  "fragments": [
    "ts-critic"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
